/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.runtime.multimap.v1;

option java_package = "io.atomix.api.runtime.multimap.v1";
option java_outer_classname = "AtomicMultiMapV1";
option java_multiple_files = true;

import "google/protobuf/duration.proto";
import "atomix/runtime/v1/primitive.proto";
import "gogoproto/gogo.proto";

// MultiMap is a service for a multimap primitive
service MultiMap {
    // Create creates the map
    rpc Create (CreateRequest) returns (CreateResponse);

    // Close closes the map
    rpc Close (CloseRequest) returns (CloseResponse);

    // Size returns the size of the map
    rpc Size (SizeRequest) returns (SizeResponse);

    // Add adds a value to an entry in the map
    rpc Add (AddRequest) returns (AddResponse);

    // Get gets the entry for a key
    rpc Get (GetRequest) returns (GetResponse);

    // Remove removes an entry from the map
    rpc Remove (RemoveRequest) returns (RemoveResponse);

    // Clear removes all entries from the map
    rpc Clear (ClearRequest) returns (ClearResponse);

    // Lock locks a key in the map
    rpc Lock(LockRequest) returns (LockResponse);

    // Unlock unlocks a key in the map
    rpc Unlock(UnlockRequest) returns (UnlockResponse);

    // Events listens for change events
    rpc Events (EventsRequest) returns (stream EventsResponse);

    // Entries lists all entries in the map
    rpc Entries (EntriesRequest) returns (stream EntriesResponse);
}

message CreateRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    map<string, string> tags = 2;
}

message CreateResponse {

}

message CloseRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message CloseResponse {

}

message SizeRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message SizeResponse {
    uint32 size = 1;
}

message AddRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
    repeated string values = 3;
}

message AddResponse {
    bool added = 1;
}

message GetRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
}

message GetResponse {
    repeated string values = 1;
}

message RemoveRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
    repeated string values = 3;
}

message RemoveResponse {
    bool removed = 1;
}

message ClearRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
}

message ClearResponse {

}

message LockRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    repeated string keys = 2;
    google.protobuf.Duration timeout = 3 [
        (gogoproto.stdduration) = true
    ];
}

message LockResponse {

}

message UnlockRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    repeated string keys = 2;
}

message UnlockResponse {

}

message EntriesRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    bool watch = 2;
}

message EntriesResponse {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsRequest {
    atomix.runtime.v1.PrimitiveId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    string key = 2;
}

message EventsResponse {
    Event event = 2 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    string key = 1;

    oneof event {
        Inserted inserted = 2;
        Updated updated = 3;
        Removed removed = 4;
    }

    message Inserted {
        repeated string values = 1;
    }

    message Updated {
        repeated string values = 1;
        repeated string prev_values = 2;
    }

    message Removed {
        repeated string values = 1;
    }
}

message Entry {
    string key = 1;
    repeated string values = 2;
}
